Login / function editar / function delete

--- a/App/Views/common/footer.phtml
+++ b/App/Views/common/footer.phtml
@@ -1,5 +1,5 @@
 
-    <footer class="text-right">
+    <footer class="text-center">
         <img src="<?=assets()->img('logo_digitalControl.png');?>"><br>
     </footer>
 </div>
