--- a/App/Views/cadastro/index.phtml
+++ b/App/Views/cadastro/index.phtml
@@ -1,12 +1,11 @@
 <?php $this->render('common/header'); ?>
-<?php  
-if((!isset ($_SESSION['email_login']) == true) and (!isset ($_SESSION['pass_login']) == true))
-{
-	unset($_SESSION['email_login']);
-	unset($_SESSION['pass_login']);
-        session()->put('_erro', 'Erro Login');
-        return redirect()->route('index');
-	}
+<?php
+if ((!isset($_SESSION['email_login']) == true) and ( !isset($_SESSION['pass_login']) == true)) {
+    unset($_SESSION['email_login']);
+    unset($_SESSION['pass_login']);
+    session()->put('_erro', 'Erro Login');
+    return redirect()->route('index');
+}
 
 $logado = $_SESSION['email_login'];
 ?>
@@ -14,16 +13,12 @@ $logado = $_SESSION['email_login'];
 <div class="page-header">
     <h1><strong>Cadastro de Pessoa</strong></h1>
 </div>
-<div class="col-md-2 pull-right">
-              <div class="glyphicon glyphicon-log-out"></div>
-              <a href="<?=url()->route('login.logout');?>" class="btn btn-link">
-                  Logout
-              </a>
-            </div>
+
+<?php $this->render('common/logout'); ?><!--logout-->
 
 <div class="row">
     <div class="col-md-6">
-        <form action="<?=url()->route('cadastro.salvar');?>" method="post" class="form-horizontal" role="form">
+        <form action="<?= url()->route('cadastro.salvar'); ?>" method="post" class="form-horizontal" role="form">
             <fieldset>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="textinput">Nome:</label>
@@ -56,15 +51,15 @@ $logado = $_SESSION['email_login'];
                         </div>
                     </div>
                 </div>
-                <?php if(session()->has('_sucesso')): ?>
-                    <div class="alert alert-success" role="alert"><?=session()->getAndRemove('_sucesso');?></div>
-                <?php endif;  ?>
-                <?php if(session()->has('_erro')): ?>
-                    <div class="alert alert-warning" role="alert"><?=session()->getAndRemove('_erro');?></div>
-                <?php endif;  ?>
+                <?php if (session()->has('_sucesso')): ?>
+                    <div class="alert alert-success" role="alert"><?= session()->getAndRemove('_sucesso'); ?></div>
+                <?php endif; ?>
+                <?php if (session()->has('_erro')): ?>
+                    <div class="alert alert-warning" role="alert"><?= session()->getAndRemove('_erro'); ?></div>
+                <?php endif; ?>
             </fieldset>
         </form>
-        <a class="btn btn-info" href="<?=url()->route('index');?>">Voltar</a>
+        <a class="btn btn-info" href="<?= url()->route('menu.index'); ?>">Voltar</a>
     </div>
 </div>
 <?php $this->render('common/footer'); ?>
