--- a/App/Views/eventos/index.phtml
+++ b/App/Views/eventos/index.phtml
@@ -13,7 +13,7 @@ $logado = $_SESSION['email_login'];
 
     <div class="page-header">
         <h1>Eventos de <strong><?=$pessoa->nome?></strong></h1>
-    </div>
+    </div>        
 
     <div class="panel panel-default">
         <div class="panel-body">
@@ -21,6 +21,7 @@ $logado = $_SESSION['email_login'];
             <a href="<?=url()->route('eventos.cadastrar', ['pessoa' => $pessoa->id])?>" class="btn btn-success">
                 Novo Evento
             </a>
+            <?php $this->render('common/logout'); ?><!--logout-->
 
         </div>
     </div>
@@ -41,7 +42,7 @@ $logado = $_SESSION['email_login'];
                     <th>Data</th>
                     <th>Hora</th>
                     <th>Evento</th>
-                    <th>Editar</th>
+                    <th>Ação</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -68,6 +69,10 @@ $logado = $_SESSION['email_login'];
                             <a href="<?=url()->route('eventos.cadastrar', ['evento' => $evento->id, 'pessoa' => $pessoa->id]);?>">
                                 Editar
                             </a>
+                            
+                            <a href="<?=url()->route('eventos.cadastrar', ['evento' => $evento->id, 'pessoa' => $pessoa->id]);?>">
+                                <span class="glyphicon" style="color: #f1220d">&#xe014;</span>
+                            </a>
                         </td>
                     </tr>
 
@@ -77,7 +82,7 @@ $logado = $_SESSION['email_login'];
             </table>
         </div>
 
-        <a class="btn btn-info" href="<?=url()->route('index');?>">Voltar</a>
+        <a class="btn btn-info" href="<?=url()->route('menu.index');?>">Voltar</a>
 
     </div>
 
