--- a/App/Views/login/index.phtml
+++ b/App/Views/login/index.phtml
@@ -1,27 +1,42 @@
+<div>
+    <iframe src="https://www.digitalcontrol.com.br/" width="100%;" height="100%"></iframe></div>
 <?php $this->render('common/header'); ?>
 
-<div class="container">
-    <div class="row vertical-offset-100">
-    	<div class="col-md-4 col-md-offset-4">
-    		<div class="panel panel-default">
-			  	<div class="panel-heading">
-			    	<h3 class="panel-title">Login</h3>
-			 	     </div>
-
-			  	<div class="panel-body">
-            <form class="form-inline">
-              <label for="email">Email:</label>
-              <input class="form-control" placeholder="E-mail" name="email" type="text">
+<div id="dControlModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+        <img class="text-left" src="<?=assets()->img('logo_digitalControl.png');?>" style=" width: -webkit-fill-available;">
+        <div class="modal-body">
+        <form role="form" method="post" action="<?=url()->route('login.logar');?>">
+          <fieldset>
+            <div class="form-group">
+                <input class="form-control" placeholder="E-mail" name="email" type="text">
+            </div>
+            <div class="form-group">
               <input class="form-control" placeholder="Password" name="password" type="password" value="">
-              <div class="form-check">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox"> Lembra-me
+            </div>
+            <div class="checkbox">
+                <label>
+                  <input name="remember" type="checkbox" value="Remember Me"> Lembra-me
                 </label>
-              </div>
-              <button type="submit" class="btn btn-primary">Logar</button>
-            </form>
-			    </div>
-			  </div>
-		</div>
-	</div>
+            </div>
+            <input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
+          </fieldset>
+        </form>
+      </div>
+
+      <!-- Modal footer 
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+      </div>-->
+        
+        
+    </div>
+  </div>
 </div>
+
+<script>
+$(document).ready(function() {
+   $('#dControlModal').modal('show');
+});
+</script>
