--- a/App/Views/cadastro/editar.phtml
+++ b/App/Views/cadastro/editar.phtml
@@ -9,45 +9,47 @@ if ((!isset($_SESSION['email_login']) == true) and ( !isset($_SESSION['pass_logi
 
 $logado = $_SESSION['email_login'];
 ?>
-
 <div class="page-header">
-    <h1><strong>Cadastro de Funcionário</strong></h1>
+    <!--<h1><strong>Cadastro de Funcionário</strong></h1>-->
+    <?php if(false): ?>
+    <h1><strong><?=$pessoa->nome?></strong></h1>
+    <?php else: ?>
+        <h1>Editar cadastro do <strong><?=$pessoa->nome?></strong></h1>
+    <?php endif; ?>
+    </div>
 </div>
 
 <?php $this->render('common/logout'); ?><!--logout-->
 
 <div class="row">
     <div class="col-md-6">
-        <form action="<?= url()->route('cadastro.salvar'); ?>" method="post" class="form-horizontal" role="form">
+        <form action="<?= url()->route('pessoa.salvar', ['pessoa'=>$pessoa->id]); ?>" method="post" class="form-horizontal" role="form">
             <fieldset>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="textinput">Nome:</label>
                     <div class="col-sm-6">
-                        <input name="nome" type="text" placeholder="Nome" class="form-control" pattern="^[A-Za-z]{4,15}$" title="Digitar somente LETRAS, tamanho maximo 15 (Caracteres)!!!" required>
+                        
+                        <?php if($pessoa):?>                        
+                        <input name="nome" value="<?=$pessoa->nome;?>" type="text" placeholder="Nome" class="form-control" pattern="^[A-Za-z]{4,15}$" title="Digitar somente LETRAS, tamanho maximo 15 (Caracteres)!!!" required>
+                        <?php endif;?>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="textinput">Fone:</label>
                     <div class="col-sm-6">
-                        <input name="fone" type="tel" placeholder="(11)99999-9999" class="form-control" pattern="\([0-9]{2}\)[0-9]{4,6}-[0-9]{3,4}$" title="ex: (11)99999-9999" required>
+                        <input name="fone" value="<?=$pessoa->fone;?>" type="tel" placeholder="(11)99999-9999" class="form-control" pattern="\([0-9]{2}\)[0-9]{4,6}-[0-9]{3,4}$" title="ex: (11)99999-9999" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="textinput">Email:</label>
                     <div class="col-sm-6">
-                        <input name="email" type="email" placeholder="Email" class="form-control">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" for="textinput">Senha:</label>
-                    <div class="col-sm-6">
-                        <input name="password" type="password" placeholder="Senha" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Deve conter pelo menos um número e uma letra maiúscula e minúscula e pelo menos 8 ou mais caracteres" required>
+                        <input name="email" value="<?=$pessoa->email;?>" type="email" placeholder="Email" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <div class="pull-left">
-                            <button type="submit" class="btn btn-primary">Cadastrar</button>
+                            <button type="submit" class="btn btn-primary">Atualizar</button>
                         </div>
                     </div>
                 </div>
