--- a/App/Views/cadastro/index.phtml
+++ b/App/Views/cadastro/index.phtml
@@ -1,65 +1,250 @@
 <?php $this->render('common/header'); ?>
-<?php
-if ((!isset($_SESSION['email_login']) == true) and ( !isset($_SESSION['pass_login']) == true)) {
-    unset($_SESSION['email_login']);
-    unset($_SESSION['pass_login']);
-    session()->put('_erro', 'Erro Login');
-    return redirect()->route('index');
-}
-
-$logado = $_SESSION['email_login'];
+<?php namespace App\Views;
+use App\Controllers;
 ?>
+<head><title>Cadastro - Moveis</title></head>
 
-<div class="page-header">
-    <h1><strong>Cadastro de Funcionário</strong></h1>
-</div>
+    <div class="page-header">
+        <?php $this->render('common/login'); ?><!--logo-->
+        <?php $this->render('common/logout'); ?><!--logout-->
+    </div>
+    <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                    <div class="navbar-header">
+                            <a class="navbar-brand" href="">CADASTRO DE IMÓVEIS</a>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#">Listar Imóveis</a></li>
+                            <li><a href="#">Cadastrar Usuarios</a></li>
+                    </ul>
+            </div>
+        </nav>
+<!--        <script type="text/javascript">
+            $(document).ready(function()){
+                $("input[name='cep']").blur(function()){
+                    var $rua = $("input[name='rua']");
+                    $.getJSON(,{
+                        cep: $( this ).val()
+                    },function( json )){
+                        $rua.val( json.rua );
+                    };
+                };
+            };
+        </script>-->
+        <?php $cep = new Controllers\CadastroController;
+            $cep->buscaPorCep($cep)
+        ?>
 
-<?php $this->render('common/logout'); ?><!--logout-->
-
-<div class="row">
-    <div class="col-md-6">
-        <form action="<?= url()->route('cadastro.salvar'); ?>" method="post" class="form-horizontal" role="form">
-            <fieldset>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" for="textinput">Nome:</label>
-                    <div class="col-sm-6">
-                        <input name="nome" type="text" placeholder="Nome" class="form-control" pattern="^[A-Za-z]{4,15}$" title="Digitar somente LETRAS, tamanho maximo 15 (Caracteres)!!!" required>
+        <form class="form-horizontal" action="<?= url()->route('cadastro.cadastroImoveis'); ?>" method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                    <label for="codigo" class="col-sm-2 control-label">Código</label>
+                    <div class="col-sm-2">
+                            <input type="text" value="" name="codigo" class="form-control" id="codigo" placeholder="Código do Imovel">
                     </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" for="textinput">Fone:</label>
-                    <div class="col-sm-6">
-                        <input name="fone" type="tel" placeholder="(11)99999-9999" class="form-control" pattern="\([0-9]{2}\)[0-9]{4,6}-[0-9]{3,4}$" title="ex: (11)99999-9999" required>
+            </div>
+            <div class="form-group">
+                    <label for="titulo" class="col-sm-2 control-label">Titulo</label>
+                    <div class="col-sm-3">
+                            <input type="text" value="" name="titulo" class="form-control" id="nome" placeholder="Titulo do Imóvel">
                     </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" for="textinput">Email:</label>
-                    <div class="col-sm-6">
-                        <input name="email" type="email" placeholder="Email" class="form-control">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" for="textinput">Senha:</label>
-                    <div class="col-sm-6">
-                        <input name="password" type="password" placeholder="Senha" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Deve conter pelo menos um número e uma letra maiúscula e minúscula e pelo menos 8 ou mais caracteres" required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <div class="pull-left">
-                            <button type="submit" class="btn btn-primary">Cadastrar</button>
+                    <label for="tipo" class="col-sm-1 control-label">Tipo</label>
+                    <div class="col-sm-2">
+                        <div class="col-sm-1">
+                            <select class="selectpicker show-tick" name="tipo">
+                                <option value="AL">Casa</option>
+                                <option value="Aluguel">Apartamento</option>
+                                <option value="Aluguel">Sobrado</option>
+                                <option value="Temporada">Chacara</option>
+                                <option value="Temporada">Kitnet</option>
+                            </select>
                         </div>
                     </div>
-                </div>
+            </div>
+            
+            <div class="form-group">
+                    <label for="cep" class="col-sm-2 control-label">Cep</label>
+                    <div class="col-sm-2">
+                            <input type="text" value="" name="cep" class="form-control" id="quantidade" placeholder="Cep">
+                    </div>
+                    <label for="ruaa" class="col-sm-1 control-label">Rua</label>
+                    <div class="col-sm-4">
+                            <input type="text" value="" name="rua" class="form-control" id="quantidade" placeholder="Rua">
+                    </div>
+                    <label for="numero" class="col-sm-1 control-label">Numero</label>
+                    <div class="col-sm-2">
+                            <input type="text" value="" name="numero" class="form-control" id="quantidade" placeholder="Numero">
+                    </div>
+            </div>
+            <div class="form-group">
+                    <label for="cidade" class="col-sm-2 control-label">Cidade</label>
+                    <div class="col-sm-2">
+                            <input type="text" value="" name="cidade" class="form-control" id="quantidade" placeholder="Cidade">
+                    </div>
+                    <label for="estado" class="col-sm-1 control-label">Estado</label>
+                    <div class="col-sm-1">
+                        <select class="selectpicker" data-live-search="true" name="estado">
+                                <option  data-tokens="AL" value="AL">AL</option>
+                                <option  data-tokens="AM" value="AM">AM</option>
+                                <option  data-tokens="AP" value="AP">AP</option>
+                                <option  data-tokens="BA" value="BA">BA</option>
+                                <option  data-tokens="CE" value="CE">CE</option>
+                                <option  data-tokens="DF" value="DF">DF</option>
+                                <option  data-tokens="ES" value="ES">ES</option>
+                                <option  data-tokens="GO" value="GO">GO</option>
+                                <option  data-tokens="MA" value="MA">MA</option>
+                                <option  data-tokens="MG" value="MG">MG</option>
+                                <option  data-tokens="MS" value="MS">MS</option>
+                                <option  data-tokens="MT" value="MT">MT</option>
+                                <option  data-tokens="PA" value="PA">PA</option>
+                                <option  data-tokens="PB" value="PB">PB</option>
+                                <option  data-tokens="PE" value="PE">PE</option>
+                                <option  data-tokens="PI" value="PI">PI</option>
+                                <option  data-tokens="PR" value="PR">PR</option>
+                                <option  data-tokens="RJ" value="RJ">RJ</option>
+                                <option  data-tokens="RN" value="RN">RN</option>
+                                <option  data-tokens="RO" value="RO">RO</option>
+                                <option  data-tokens="RR" value="RR">RR</option>
+                                <option  data-tokens="RS" value="RS">RS</option>
+                                <option  data-tokens="SC" value="SC">SC</option>
+                                <option  data-tokens="SE" value="SE">SE</option>
+                                <option  data-tokens="SP" value="SP">SP</option>
+                                <option  data-tokens="TO" value="TO">TO</option>
+                            </select>
+                    </div>
+                    
+            </div>
+            <div class="form-group">
+                <label for="bairro" class="col-sm-2 control-label">Bairro</label>
+                    <div class="col-sm-4">
+                            <input type="text" value="" name="bairro" class="form-control" id="quantidade" placeholder="Bairro">
+                    </div>
+                    <label for="complemente" class="col-sm-1 control-label">Complemento</label>
+                    <div class="col-sm-4">
+                            <input type="text" value="" name="complemento" class="form-control" id="quantidade" placeholder="Complemento">
+                    </div>
+            </div>    
+            <div class="form-group">
+                    <label for="preco" class="col-sm-2 control-label">Preço</label>
+                    <div class="col-sm-2">
+                            <input type="text" value="" name="preco" class="form-control" id="foto" placeholder="Preço">
+                    </div>
+                    <div class="col-sm-2">
+                        <select class="selectpicker show-tick" name="forma">
+                            <option value="AL">Venda</option>
+                            <option value="Aluguel">Aluguel</option>
+                            <option value="Temporada">Temporada</option>
+                          </select>
+                    </div>
+            </div>
+             <div class="form-group">
+                    <label for="area" class="col-sm-2 control-label">Area</label>
+                    <div class="col-sm-2">
+                        <input type="text" value="" name="area" class="form-control" id="foto" placeholder="Área Mt²">
+                    </div>
+            </div>
+            <div class="form-group">
+                    <label for="quarto" class="col-sm-2 control-label">Quarto</label>
+                    <div class="col-sm-1">
+                        <select name="quarto">
+                            <option value="1">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                         </select>
+                    </div>
+                    <label for="suite" class="col-sm-1 control-label">Suite</label>
+                    <div class="col-sm-1">
+                        <select name="suite">
+                            <option value="1">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                          </select>
+                    </div>
+                    <label for="banheiro" class="col-sm-1 control-label">Banheiro</label>
+                    <div class="col-sm-1">
+                        <select name="banheiro">
+                            <option value="1">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                          </select>
+                    </div>
+                    <label for="sala" class="col-sm-1 control-label">Sala</label>
+                    <div class="col-sm-1">
+                        <select name="sala">
+                            <option value="1">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                          </select>
+                    </div>
+                    <label for="garagem" class="col-sm-1 control-label">Garagem</label>
+                    <div class="col-sm-1">
+                        <select name="garagem">
+                            <option value="1">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                          </select>
+                    </div>
+            </div>
+            <div class="form-group">
+                    <label for="imagem" class="col-sm-2 control-label">Imagem</label>
+                    <div class="col-sm-4">
+                        <input type="file" value="" name="arquivo" class="form-control" id="imagem">
+                    </div>
+            </div>
+            <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-success">Cadastrar</button>
+                    </div>
+            </div>
+               
                 <?php if (session()->has('_sucesso')): ?>
                     <div class="alert alert-success" role="alert"><?= session()->getAndRemove('_sucesso'); ?></div>
                 <?php endif; ?>
                 <?php if (session()->has('_erro')): ?>
                     <div class="alert alert-danger" role="alert"><?= session()->getAndRemove('_erro'); ?></div>
                 <?php endif; ?>
-            </fieldset>
+            
         </form>
-        <a class="btn btn-info" href="<?= url()->route('pessoa.index'); ?>">Voltar</a>
     </div>
-</div>
+
 <?php $this->render('common/footer'); ?>
