--- a/App/Views/cadastro/login.phtml
+++ b/App/Views/cadastro/login.phtml
@@ -1,40 +1,44 @@
-<?php $this->render('common/header');?>
-<!-- The Modal -->
-<div class="modal fade" id="myModal">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
+<?php $this->render('common/header'); ?>
 
-      <!-- Modal Header -->
-      <div class="modal-header">
-        <h4 class="modal-title">Logar</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-
-      <!-- Modal body -->
-      <div class="modal-body">
-        <form role="form" method="post" action="<?=url()->route('login.logar');?>">
-          <fieldset>
-            <div class="form-group">
-                <input class="form-control" placeholder="E-mail" name="email" type="text">
-            </div>
-            <div class="form-group">
-              <input class="form-control" placeholder="Password" name="password" type="password" value="">
-            </div>
-            <div class="checkbox">
-                <label>
-                  <input name="remember" type="checkbox" value="Remember Me"> Lembra-me
-                </label>
-            </div>
-            <input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
-          </fieldset>
-        </form>
-      </div>
-
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-      </div>
-
-    </div>
-  </div>
+<div class="page-header">
+    <h1><strong>Cadastro de Login</strong></h1>
 </div>
+
+<?php $this->render('common/logout'); ?><!--logout-->
+
+<div class="row">
+    <div class="col-md-6">
+        <form action="<?= url()->route('cadastro.salvar'); ?>" method="post" class="form-horizontal" role="form">
+            <fieldset>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label" for="textinput">Email:</label>
+                    <div class="col-sm-6">
+                        <input name="email" type="email" placeholder="Email" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label" for="textinput">Senha:</label>
+                    <div class="col-sm-6">
+                        <input name="password" type="password" placeholder="Senha" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Deve conter pelo menos um número e uma letra maiúscula e minúscula e pelo menos 8 ou mais caracteres" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <div class="pull-left">
+                            <button type="submit" class="btn btn-primary">Cadastrar</button>
+                        </div>
+                    </div>
+                </div>
+                <?php if (session()->has('_sucesso')): ?>
+                    <div class="alert alert-success" role="alert"><?= session()->getAndRemove('_sucesso'); ?></div>
+                <?php endif; ?>
+                <?php if (session()->has('_erro')): ?>
+                    <div class="alert alert-danger" role="alert"><?= session()->getAndRemove('_erro'); ?></div>
+                <?php endif; ?>
+            </fieldset>
+        </form>
+        <a class="btn btn-info" href="<?= url()->route('pessoa.index'); ?>">Voltar</a>
+    </div>
+</div>
+<?php $this->render('common/footer'); ?>
