--- a/App/Views/common/header.phtml
+++ b/App/Views/common/header.phtml
@@ -1,15 +1,16 @@
 <html>
-<head>
-    <title>Agenda - Digital Control</title>
-    <link rel="stylesheet" href="<?=assets()->css('bootstrap.min.css');?>">
-    <link rel="stylesheet" href="<?=assets()->css('main.css');?>">
-    <link rel="stylesheet" href="<?=assets()->css('login.css');?>">
-    <script type="text/javascript" src="<?=assets()->js('jquery.min.js');?>"></script>
-    <script type="text/javascript" src="<?=assets()->js('login.js');?>"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
-</head>
-<body>
-<div class="container">
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
+        <link rel="stylesheet" href="<?= assets()->css('bootstrap.min.css'); ?>">
+        <link rel="stylesheet" href="<?= assets()->css('main.css'); ?>">
+        <link rel="stylesheet" href="<?= assets()->css('login.css'); ?>">
+        <script type="text/javascript" src="<?= assets()->js('jquery.min.js'); ?>"></script>
+        <script type="text/javascript" src="<?= assets()->js('login.js'); ?>"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
+    </head>
+    <body>
+        <div class="container">
