function CREATE / DELETE / EDIT + TELA MENU

--- a/App/Views/common/navbar.phtml
+++ b/App/Views/common/navbar.phtml
@@ -1,21 +1,12 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Web Dev Academy</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Opções</a></li>
-                <li><a href="#">Perfil</a></li>
-                <li><a href="#">Ajuda</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<nav class="navbar navbar-default">
+            <div class="container-fluid">
+                    <div class="navbar-header">
+                            <a class="navbar-brand" href="">GROUP Digital</a>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="<?= url()->route('menu.index');?>">Home</a></li>
+                        <li><a href="<?= url()->route('cadastro.index');?>">Cadastrar Imóveis</a></li>
+                            
+                    </ul>
+            </div>
+        </nav>
