--- a/App/Views/cadastro/index.phtml
+++ b/App/Views/cadastro/index.phtml
@@ -1,25 +1,89 @@
 <?php $this->render('common/header'); ?>
-<?php namespace App\Views;
-use App\Controllers;
-?>
-<head><title>Cadastro - Moveis</title></head>
+<head><title>Cadastro - Moveis</title>
+<head>
+    <title>ViaCEP Webservice</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <!-- Adicionando Javascript -->
+    <script type="text/javascript" >
+    
+    function limpa_formulário_cep() {
+            //Limpa valores do formulário de cep.
+            document.getElementById('rua').value=("");
+            document.getElementById('bairro').value=("");
+            document.getElementById('cidade').value=("");
+            document.getElementById('uf').value=("");
+            document.getElementById('ibge').value=("");
+    }
+
+    function meu_callback(conteudo) {
+        if (!("erro" in conteudo)) {
+            //Atualiza os campos com os valores.
+            document.getElementById('rua').value=(conteudo.logradouro);
+            document.getElementById('bairro').value=(conteudo.bairro);
+            document.getElementById('cidade').value=(conteudo.localidade);
+            document.getElementById('uf').value=(conteudo.uf);
+            document.getElementById('ibge').value=(conteudo.ibge);
+        } //end if.
+        else {
+            //CEP não Encontrado.
+            limpa_formulário_cep();
+            alert("CEP não encontrado.");
+        }
+    }
+        
+    function pesquisacep(valor) {
+
+        //Nova variável "cep" somente com dígitos.
+        var cep = valor.replace(/\D/g, '');
+
+        //Verifica se campo cep possui valor informado.
+        if (cep != "") {
+
+            //Expressão regular para validar o CEP.
+            var validacep = /^[0-9]{8}$/;
+
+            //Valida o formato do CEP.
+            if(validacep.test(cep)) {
+
+                //Preenche os campos com "..." enquanto consulta webservice.
+                document.getElementById('rua').value="...";
+                document.getElementById('bairro').value="...";
+                document.getElementById('cidade').value="...";
+                document.getElementById('uf').value="...";
+                document.getElementById('ibge').value="...";
+
+                //Cria um elemento javascript.
+                var script = document.createElement('script');
+
+                //Sincroniza com o callback.
+                script.src = '//viacep.com.br/ws/'+ cep + '/json/?callback=meu_callback';
+
+                //Insere script no documento e carrega o conteúdo.
+                document.body.appendChild(script);
+
+            } //end if.
+            else {
+                //cep é inválido.
+                limpa_formulário_cep();
+                alert("Formato de CEP inválido.");
+            }
+        } //end if.
+        else {
+            //cep sem valor, limpa formulário.
+            limpa_formulário_cep();
+        }
+    };
+
+    </script>
+    </head>
 
     <div class="page-header">
         <?php $this->render('common/login'); ?><!--logo-->
         <?php $this->render('common/logout'); ?><!--logout-->
     </div>
     <div class="container">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                    <div class="navbar-header">
-                            <a class="navbar-brand" href="">CADASTRO DE IMÓVEIS</a>
-                    </div>
-                    <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#">Listar Imóveis</a></li>
-                            <li><a href="#">Cadastrar Usuarios</a></li>
-                    </ul>
-            </div>
-        </nav>
+        <?php $this->render('common/navbar'); ?><!--navbar-->
 <!--        <script type="text/javascript">
             $(document).ready(function()){
                 $("input[name='cep']").blur(function()){
@@ -32,9 +96,6 @@ use App\Controllers;
                 };
             };
         </script>-->
-        <?php $cep = new Controllers\CadastroController;
-            $cep->buscaPorCep($cep)
-        ?>
 
         <form class="form-horizontal" action="<?= url()->route('cadastro.cadastroImoveis'); ?>" method="post" enctype="multipart/form-data">
             <div class="form-group">
@@ -52,38 +113,43 @@ use App\Controllers;
                     <div class="col-sm-2">
                         <div class="col-sm-1">
                             <select class="selectpicker show-tick" name="tipo">
-                                <option value="AL">Casa</option>
-                                <option value="Aluguel">Apartamento</option>
-                                <option value="Aluguel">Sobrado</option>
-                                <option value="Temporada">Chacara</option>
-                                <option value="Temporada">Kitnet</option>
+                                <option value="Casa">Casa</option>
+                                <option value="Apartamento">Apartamento</option>
+                                <option value="Sobrado">Sobrado</option>
+                                <option value="Chacara">Chacara</option>
+                                <option value="Kitnet">Kitnet</option>
                             </select>
                         </div>
                     </div>
             </div>
             
             <div class="form-group">
-                    <label for="cep" class="col-sm-2 control-label">Cep</label>
+                    <label class="col-sm-2 control-label">Cep:</label>
                     <div class="col-sm-2">
-                            <input type="text" value="" name="cep" class="form-control" id="quantidade" placeholder="Cep">
+                        <input class="form-control" placeholder="Cep" name="cep" type="text" id="cep" value="" size="10" maxlength="9"
+                    onblur="pesquisacep(this.value);" />
                     </div>
                     <label for="ruaa" class="col-sm-1 control-label">Rua</label>
                     <div class="col-sm-4">
-                            <input type="text" value="" name="rua" class="form-control" id="quantidade" placeholder="Rua">
+                            <input name="rua" type="text" id="rua" size="60" class="form-control" placeholder="Rua">
                     </div>
                     <label for="numero" class="col-sm-1 control-label">Numero</label>
                     <div class="col-sm-2">
-                            <input type="text" value="" name="numero" class="form-control" id="quantidade" placeholder="Numero">
+                            <input type="text" value="" name="numero" class="form-control" id="numero" placeholder="Numero">
                     </div>
             </div>
             <div class="form-group">
                     <label for="cidade" class="col-sm-2 control-label">Cidade</label>
                     <div class="col-sm-2">
-                            <input type="text" value="" name="cidade" class="form-control" id="quantidade" placeholder="Cidade">
+                            <input name="cidade" type="text" id="cidade" size="40" class="form-control" placeholder="Cidade">
                     </div>
-                    <label for="estado" class="col-sm-1 control-label">Estado</label>
+                    <label for="uf" class="col-sm-1 control-label">Estado</label>
                     <div class="col-sm-1">
-                        <select class="selectpicker" data-live-search="true" name="estado">
+                            <input name="uf" type="text" id="uf" size="60" class="form-control" placeholder="Estado">
+                    </div><!--                    
+                    <label for="estado" class="col-sm-1 control-label" name="uf" type="text" id="uf" size="2">Estado</label>
+                    <div class="col-sm-1">
+                        <select class="selectpicker" data-live-search="true" name="uf" type="text" id="uf" size="2">
                                 <option  data-tokens="AL" value="AL">AL</option>
                                 <option  data-tokens="AM" value="AM">AM</option>
                                 <option  data-tokens="AP" value="AP">AP</option>
@@ -111,13 +177,13 @@ use App\Controllers;
                                 <option  data-tokens="SP" value="SP">SP</option>
                                 <option  data-tokens="TO" value="TO">TO</option>
                             </select>
-                    </div>
+                    </div>-->
                     
             </div>
             <div class="form-group">
                 <label for="bairro" class="col-sm-2 control-label">Bairro</label>
                     <div class="col-sm-4">
-                            <input type="text" value="" name="bairro" class="form-control" id="quantidade" placeholder="Bairro">
+                            <input name="bairro" type="text" id="bairro" size="40" class="form-control" placeholder="Bairro">
                     </div>
                     <label for="complemente" class="col-sm-1 control-label">Complemento</label>
                     <div class="col-sm-4">
@@ -131,7 +197,7 @@ use App\Controllers;
                     </div>
                     <div class="col-sm-2">
                         <select class="selectpicker show-tick" name="forma">
-                            <option value="AL">Venda</option>
+                            <option value="venda">Venda</option>
                             <option value="Aluguel">Aluguel</option>
                             <option value="Temporada">Temporada</option>
                           </select>
@@ -147,7 +213,7 @@ use App\Controllers;
                     <label for="quarto" class="col-sm-2 control-label">Quarto</label>
                     <div class="col-sm-1">
                         <select name="quarto">
-                            <option value="1">0</option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -163,7 +229,7 @@ use App\Controllers;
                     <label for="suite" class="col-sm-1 control-label">Suite</label>
                     <div class="col-sm-1">
                         <select name="suite">
-                            <option value="1">0</option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -179,7 +245,7 @@ use App\Controllers;
                     <label for="banheiro" class="col-sm-1 control-label">Banheiro</label>
                     <div class="col-sm-1">
                         <select name="banheiro">
-                            <option value="1">0</option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -195,7 +261,7 @@ use App\Controllers;
                     <label for="sala" class="col-sm-1 control-label">Sala</label>
                     <div class="col-sm-1">
                         <select name="sala">
-                            <option value="1">0</option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -211,7 +277,7 @@ use App\Controllers;
                     <label for="garagem" class="col-sm-1 control-label">Garagem</label>
                     <div class="col-sm-1">
                         <select name="garagem">
-                            <option value="1">0</option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -231,6 +297,11 @@ use App\Controllers;
                         <input type="file" value="" name="arquivo" class="form-control" id="imagem">
                     </div>
             </div>
+            
+            <label class="col-sm-2 control-label">IBGE:</label>
+            <div class="col-sm-1">
+            <input class="form-control" name="ibge" type="text" id="ibge" size="8" /><br /><br />
+            </div>
             <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                             <button type="submit" class="btn btn-success">Cadastrar</button>
@@ -245,6 +316,7 @@ use App\Controllers;
                 <?php endif; ?>
             
         </form>
+        
     </div>
 
 <?php $this->render('common/footer'); ?>
