--- a/App/Views/common/footer.phtml
+++ b/App/Views/common/footer.phtml
@@ -1,6 +1,6 @@
 
     <footer class="text-center">
-        
+        <small><strong>GROUP Digital | </strong>Version 0.01</small>
     </footer>
 </div>
 </body>
