--- a/App/Views/cadastro/index.phtml
+++ b/App/Views/cadastro/index.phtml
@@ -1,9 +1,7 @@
 <?php $this->render('common/header'); ?>
+<?php $this->render('common/session'); ?>
 <head><title>Cadastro - Moveis</title>
 <head>
-    <title>ViaCEP Webservice</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
     <!-- Adicionando Javascript -->
     <script type="text/javascript" >
     
