function SEARCH / XML

--- a/App/Views/common/navbar.phtml
+++ b/App/Views/common/navbar.phtml
@@ -6,6 +6,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="<?= url()->route('menu.index');?>">Home</a></li>
                         <li><a href="<?= url()->route('cadastro.index');?>">Cadastrar Imóveis</a></li>
+                        <li><a href="<?= url()->route('xml.index');?>">Importar XML</a></li>
                             
                     </ul>
             </div>
